--- a/app/web/view/layout.html
+++ b/app/web/view/layout.html
@@ -6,9 +6,13 @@
   <meta name="description">
   <meta http-equiv="content-type" content="text/html;charset=utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-  <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" /> -->
+  <style>
+  .js-system--apple {
+    font-feature-settings: "case", "ss01", "ss02";
+  }
+  </style>
 </head>
-<body>
+<body class="js-system--apple">
   <div id="app"><!--vue-ssr-outlet--></div>
 </body>
 </html>
