feat(header.vue): Add router judgment

--- a/app/web/asset/_less/reset.less
+++ b/app/web/asset/_less/reset.less
@@ -29,6 +29,7 @@ body {
   color: @text-color;
   background: @background-color;
   transition: all .2s ease;
+  cursor: default;
 
   @media (max-width: @breakpoint-md) {
     .padding-offset(@space-md);
