feat: Add gitalk

--- a/app/web/asset/_less/variables.less
+++ b/app/web/asset/_less/variables.less
@@ -32,6 +32,7 @@
 @border-default: @border-md;
 
 // Colors
+@grey-color: #eee;
 @link-color: #59bba5;
 @background-color: #fff;
 @text-color: #000;
