perf: Add gitalk

--- a/app/public/_less/tean/theme/common.less
+++ b/app/public/_less/tean/theme/common.less
@@ -852,3 +852,13 @@ body:hover .latest {
     padding: 0;
   }
 }
+
+.gt-avatar {
+  & > img {
+    margin-left: 0;
+  }
+}
+
+.gt-btn.gt-btn-public {
+  text-align: center;
+}
